[package]
name = "geodiesel"
version = "0.1.0"
authors = ["Baptiste Darthenay <baptiste.darthenay@gmail.com>"]

[dependencies]
url = { version = "1.4.0", optional = true }
dotenv = ">=0.8, <0.11"

[dependencies.diesel]
version = "1.2"
features = [
    "postgres",
]

[dev-dependencies]
difference = "1.0"
tempdir = "0.3.4"
regex = "0.2"
url = { version = "1.4.0" }